<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PharmacyLocator</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_1">Hello world</string>
    <string name="text_view_2">Hello fragment</string>
    <string name="btn_change">Change fragment</string>
    <string name="text_view_3">Bravo Frosina!</string>
    
    <string name="search_button">Search pharmacie</string>
    <string name="locate_nearest">Locate nearest pharmacie</string>
    <string name="list_pharmacies">List all pharmacies</string>
    <string name="find_location">Choose location</string>
    <string name="your_location_string">Search nearby your location</string>
    <string name="search_nearby">Nearby</string>
    <string name="search_by_name">Search</string>
    <string name="selectable">Select pharmacy for more details</string>
    <string name="pipeline">|</string>
    <string name="search_pharmacy_hint">Enter a name</string>
    <string name="pharmacy_location">Location</string>
    <string name="pharmacy_number">Phone</string>
    <string name="map">Map</string>
    
    <string name="call_pharmacy">Call</string>
    <string name="drug_name_text">Drug name</string>
    <string name="drug_latin_name_text">Drug latin name</string>
    <string name="drug_dose_text">Drug dose</string>
    <string name="drug_details_text">Drug details</string>
    <string name="drugs_button_text">Drugs</string>
    <string name="pharmacy_adress_text">Address</string>
    <string name="pharmacy_city_text">City</string>
    <string name="pharmacy_telephone_text">Telephone</string>
   <string name="pharmacy_map_text">Location</string>
   <string name="pharmacies_map">Pharmacies nearby</string>
   <string name="my_name">Name</string>
   <string name="my_second_name">Second name</string>
   <string name="faculty">Faculty</string>
   
   <string name="about">About author</string>
   <string name="show_map_text">Show map</string>
   <string name="retry_conn_button">Retry</string>
  
    

</resources>
