<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment"
    android:background="@color/carbon_grey">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/drug_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:layout_weight="1"
            android:singleLine="false" 
            android:textColor="@color/sun_yellow"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:src="@drawable/drugs" 
             android:layout_weight="1"
            android:contentDescription="@null"/>
        
        

    </LinearLayout>
    <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/drug_latin_name_text" 
            android:layout_weight="1"
            />

    <TextView
        android:id="@+id/latin_drug_text_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_1"
        android:textColor="@color/sun_yellow"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/drug_dose_text"
        />

    <TextView
        android:id="@+id/drug_dose_text_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_1"
        android:textColor="@color/sun_yellow"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/drug_details_text" 
        />

    <TextView
        android:id="@+id/drug_details_text_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_1"
        android:textColor="@color/sun_yellow"
       />

</LinearLayout>
